task1/policies/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: validate-run-as-non-root

      match:
        any:
          - resources:
              kinds:
                - Pod

      exclude:
        any:
          - resources:
              namespaces:
                - argocd

      validate:
        message: "Containers must not run as root."

        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
